--- a/smartcontract/package.json
+++ b/smartcontract/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "npx hardhat ignition deploy ./ignition/modules/SubscriptionManager.ts --network localhost",
+    "script": "npx hardhat run script/index.ts --network localhost",
+    "sepolia": "npx hardhat ignition deploy ./ignition/modules/SubscriptionManager.ts --network sepolia"
   },
   "author": "Dawit Mellese",
   "license": "ISC",
