--- a/smartcontract/package.json
+++ b/smartcontract/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "local": "npx hardhat ignition deploy ./ignition/modules/SubscriptionManager.ts --network localhost",
-    "script": "npx hardhat run script/index.ts --network localhost",
+    "script": "npx hardhat run scripts/index.ts --network localhost",
     "sepolia": "npx hardhat ignition deploy ./ignition/modules/SubscriptionManager.ts --network sepolia"
   },
   "author": "Dawit Mellese",
@@ -13,7 +13,7 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.16"
+    "hardhat": "^2.22.10"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0"
