--- a/smart_contract/package.json
+++ b/smart_contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smartcontract",
+  "name": "smart_contract",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,12 +8,13 @@
     "script": "npx hardhat run scripts/index.ts --network localhost",
     "sepolia": "npx hardhat ignition deploy ./ignition/modules/SubscriptionManager.ts --network sepolia"
   },
-  "author": "Dawit Mellese",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.10"
+    "hardhat": "^2.22.16"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.1.0"
